--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-    <meta name="theme-color" content="#2196F3">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <title>Free Professional Web Hosting</title>
+	<meta name="keywords" content="free, web, hosting, web hosting, domain names, web site, search engine optimization, hosting, servers">
+	<meta name="description" content="Get Free Professional Web Hosting for your Website">
+	<meta name="author" content="MyOwnFreeHosters">
+	<meta name="robots" content="index, follow">
+	<meta name="revisit-after" content="5 days">
+	<meta name="theme-color" content="#2196F3">
+	<meta name="twitter:card" content="summary_large_image">
+    <meta property="og:url" content="https://"> 
+	<meta property="og:type" content="website"> 
+	<meta property="og:title" content="Free Professional Web Hosting">
+	<meta property="og:image" content="https://">
+	<meta property="og:locale" content="en_US">
+	<link rel="canonical" href="https://">
+	<link rel='shortcut icon' href="favicon.ico">
 
     <!-- CSS  -->
     <link href="min/plugin-min.css" type="text/css" rel="stylesheet">
