Performed SEO Optimization's
Added Schema.org Structure

--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
         <div class="container">
             <div class="nav-wrapper">
             <a href="#" id="logo-container" class="brand-logo">MD Template</a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="#intro">Service</a></li>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#team">Team</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="https://github.com/joashp/material-design-template" target="_blank">Download</a></li>
+                <ul itemscope itemtype="http://www.schema.org/SiteNavigationElement" class="right hide-on-med-and-down">
+                    <li itemprop="name"><a href="#intro" itemprop="url">Service</a></li>
+                    <li><a href="#work" itemprop="url">Work</a></li>
+                    <li><a href="#team" itemprop="url">Team</a></li>
+                    <li><a href="#contact" itemprop="url">Contact</a></li>
+                    <li><a href="https://github.com/joashp/material-design-template" target="_blank" itemprop="url">Download</a></li>
                 </ul>
-                <ul id="nav-mobile" class="side-nav">
-                    <li><a href="#intro">Service</a></li>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#team">Team</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="https://github.com/joashp/material-design-template" target="_blank">Download</a></li>
+                <ul itemscope itemtype="http://www.schema.org/SiteNavigationElement" id="nav-mobile" class="side-nav">
+                    <li><a href="#intro" itemprop="url">Service</a></li>
+                    <li><a href="#work" itemprop="url">Work</a></li>
+                    <li><a href="#team" itemprop="url">Team</a></li>
+                    <li><a href="#contact" itemprop="url">Contact</a></li>
+                    <li><a href="https://github.com/joashp/material-design-template" target="_blank" itemprop="url">Download</a></li>
                 </ul>
             <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
             </div>
