--- a/domain.html
+++ b/domain.html
@@ -13,7 +13,7 @@
 	<meta name="twitter:card" content="summary_large_image">
     <meta property="og:url" content="https://"> 
 	<meta property="og:type" content="website"> 
-	<meta property="og:title" content="Free Professional Web Hosting">
+	<meta property="og:title" content="Domain Names - Free Professional Web Hosting">
 	<meta property="og:image" content="https://">
 	<meta property="og:locale" content="en_US">
 	<link rel="canonical" href="https://">
@@ -290,7 +290,7 @@
         </div>
     </div>
 </div>
-<div class="section scrollspy" id="faq">
+<div class="section scrollspy" id="faqs">
 <div class="container">
         <h2 class="header text_b center">Frequently Asked Questions!</h2>
 		 <ul class="collapsible popout">
