--- a/domain.html
+++ b/domain.html
@@ -157,7 +157,7 @@
 	  </div>
 <div class="clearfix"/>
 
-<div class="section scrollspy" id="work">
+<div class="section scrollspy" id="features">
     <div class="container">
         <h2 class="header text_b center">Each Domain Includes</h2>
         <div class="row">
